# Pixie

./: .gitignore  AGENTS.md  AppIcon.icns  Cargo.toml  Info.plist.ext  README.md  justfile  pixie.schema.json
.github/workflows/: ci.yml  release.yml
Pixie.app/Contents/: Info.plist
src/: accessibility.rs  config.rs  error.rs  event_tap.rs  hotkey.rs  leader_mode.rs  main.rs  menu_bar.rs  notification.rs  window.rs
src/ui/: list_item.rs  mod.rs  theme.rs  window_picker.rs
