[package]
name = "pixie"
version = "0.1.0"
edition = "2021"
description = "macOS window focusing tool with global shortcuts"
authors = ["Emma"]
license = "MIT"

[dependencies]
# Global hotkey support
global-hotkey = "0.7"

# macOS Accessibility API (uses core-foundation 0.9)
accessibility = "0.1"
accessibility-sys = "0.1"

# macOS core frameworks - use 0.9 to match accessibility crate
core-graphics = "0.23"
core-foundation = "0.9"
core-foundation-sys = "0.8"
cocoa = "0.25"
objc = "0.2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"

# Serialization for persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# App directories for config storage
dirs = "6"

# Ctrl+C handling for headless mode
ctrlc = "3"

# Multi-producer multi-consumer channels for thread-safe messaging
crossbeam = "0.8"

[profile.release]
opt-level = 2
lto = true
strip = true

# App bundle configuration for cargo-bundle
[package.metadata.bundle]
name = "Pixie"
identifier = "com.pixie.app"
icon = ["AppIcon.icns"]
resources = ["menuTemplate@2x.png"]
category = "public.app-category.utilities"
short_description = "macOS window focusing tool with global shortcuts"
long_description = "Pixie is a macOS window focus tool with a leader key system for keyboard-driven window management"
osx_minimum_system_version = "10.15"
osx_info_plist_exts = ["Info.plist.ext"]
