[package]
name = "pixie"
version = "0.1.1"
edition = "2024"
description = "macOS window focusing tool with global shortcuts"
authors = ["Emma"]
license = "MIT"

[dependencies]
# macOS Accessibility API (0.2 uses core-foundation 0.10, compatible with GPUI)
accessibility = "0.2"
accessibility-sys = "0.2"

# macOS core frameworks - match GPUI dependencies
core-graphics = "0.24"
core-text = "=21.0.0"
core-foundation = "0.10"
core-foundation-sys = "0.8"
cocoa = "0.25"
objc = "0.2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization for persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# App directories for config storage
dirs = "6"

# Ctrl+C handling for headless mode
ctrlc = "3"

# Multi-producer multi-consumer channels for thread-safe messaging
crossbeam = "0.8"

# Bitflags for modifier handling
bitflags = "2"

# GPUI for window picker UI
gpui = "0.2.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# For getting app icons
objc2 = "0.6"
objc2-app-kit = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("cargo-clippy"))',
] }

[profile.release]
opt-level = 2
lto = true
strip = true

# App bundle configuration for cargo-bundle
[package.metadata.bundle]
name = "Pixie"
identifier = "com.pixie.app"
icon = ["AppIcon.icns"]
resources = ["menuTemplate@2x.png"]
category = "public.app-category.utilities"
short_description = "macOS window focusing tool with global shortcuts"
long_description = "Pixie is a macOS window focus tool with a leader key system for keyboard-driven window management"
osx_minimum_system_version = "10.15"
osx_info_plist_exts = ["Info.plist.ext"]
